Added example of usage